# Pulso360

./: .gitignore  API_CHANGES_AVALIACOES.md  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST_REFATORACAO.md  CONCLUSAO_FASE1.md  CORRECAO_USUARIO_ID_TAREFAS.md  DIAGNOSTICO_RESULTADO_AVALIACAO.md  ENTREGA_FINAL.md  EXECUTAR.md  EXEMPLOS_IMPLEMENTACAO.md  FRONTEND_AUTH_ADAPTACAO.md  GUIA_PRATICO_FASE2.md  GUIA_TESTE_AVALIACOES.md  INDICE_DOCUMENTACAO.md  INDICE_VISUAL.md  INICIAR_SISTEMA.md  INTEGRACAO.md  INTEGRACAO_AVALIACOES_RESUMO.md  INTEGRACAO_EQUIPE_COMPLETA.md  INVENTARIO_ENTREGAVEIS.md  MELHORIAS_ADMIN_PAGES.md  MELHORIAS_IMPLEMENTADAS.md  PLANO_INTEGRACAO_COMPLETO.md  PLANO_REFATORACAO.md  PROXIMAS_ACOES.md  QUICK_REFERENCE.md  README.md  RELATORIO_FINAL.md  RESUMO_EXECUTIVO.md  RESUMO_IMPLEMENTACAO_SPRINTS_1_2.md  SPRINT3_RELATORIO_FINAL.md  SPRINT3_RESUMO_VISUAL.md  STYLE_GUIDE.md  SUMARIO_COMPLETO.md  VALIDACAO_FASE1.md  package-lock.json  proteger_endpoints_auto.py  start-backend.bat  test_completo.py  (+2 more)
backend/: README.md  criar_admin.py  proteger_endpoints.py  pyproject.toml  test_all_endpoints.py  test_quick.py
backend/backend/: alembic.ini  criar_avaliacoes_teste.py  criar_usuario_teste.py  fix_imports.py  main.py
backend/backend/alembic/: env.py
backend/backend/api/: api.py
backend/backend/core/: auth_service.py  configs.py  database  database.py  dependencies.py  errors.py  logging_config.py  security.py
backend/backend/filters/: acao_meta_filter.py  avaliacao_filter.py  ciclo_avaliacao_filter.py  equipe_filter.py  feedback_filter.py  item_avaliacao_filter.py  membro_equipe_filter.py  meta_filter.py  papel_filter.py  pdi_filter.py  perfil_usuario_filter.py  usuario_competencia_filter.py  usuario_filter.py  usuario_papel_filter.py
backend/tests/: __init__.py  test_dashboard.py  test_endpoints.py  test_endpoints_full.py  test_live_api.py  test_tarefas.py
(+196 files in other folders)
